--- a/src/app/pages/landing-page/landing-page.component.html
+++ b/src/app/pages/landing-page/landing-page.component.html
@@ -1,1 +1,35 @@
-<p>landing-page works!</p>
+<app-landing-header></app-landing-header>
+
+
+<div class="landing-container">
+  <div class="left-section">
+    <div class="title">
+      <h1>Empieza a tomar el control de tus finanzas</h1>
+    </div>
+    <div class="description">
+      <p>Herramienta diseñada para ayudarte a ahorrar, organizar tus gastos y alcanzar tus metas financieras de manera sencilla y personalizada.</p>
+    </div>
+  </div>
+  <div class="right-section">
+    <img src="assets/Business_Plan.png" alt="Imagen ilustrativa" height="603" width="578" priority />
+  </div>
+</div>
+<!-- Nueva Sección -->
+<div class="services-section">
+  <h2>¿Cómo podemos ayudarte?</h2>
+  <div class="service-cards">
+    <div class="card">
+      <i nz-icon nzType="clock-circle" nzTheme="outline"></i>
+      <p>Ahorro de tiempo al utilizarse.</p>
+    </div>
+    <div class="card">
+      <i nz-icon nzType="appstore" nzTheme="outline"></i>
+      <p>Fácil e intuitiva de usar.</p>
+    </div>
+    <div class="card">
+      <i nz-icon nzType="safety-certificate" nzTheme="outline"></i>
+      <p>Segura y accesible para cualquier persona.</p>
+    </div>
+  </div>
+</div>
+
