--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
+<!-- Mostrar el header solo en rutas específicas -->
+<app-header *ngIf="shouldShowHeader()"></app-header>
+
+<!-- Resto del contenido de la aplicación -->
 <router-outlet></router-outlet>
