--- a/src/app/components/landing-header/landing-header.component.html
+++ b/src/app/components/landing-header/landing-header.component.html
@@ -3,7 +3,7 @@
     <img src="assets/Logo-WalletWatch.png" alt="WalletWatch Logo" />
   </div>
   <div class="auth-buttons">
-    <button nz-button nzType="default">Iniciar sesión</button>
-    <button nz-button nzType="primary" class="register-button">Registrarse</button>
+    <button nz-button nzType="default" routerLink="/login">Iniciar sesión</button>
+    <button nz-button nzType="primary" class="register-button" routerLink="/register">Registrarse</button>
   </div>
 </header>
