--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -34,20 +34,41 @@
   transform: translate(50%, 50%) rotate(35deg);
 }
 
+
 .login-box {
   background-color: #ffffff;
   padding: 40px;
   border-radius: 14px;
   width: 100%;
   max-width: 700px;
-  min-height: 600px; /* Asegura una altura mínima */
+  min-height: 500px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   display: flex;
-  flex-direction: column;
-  justify-content: space-between; /* Distribuye los elementos verticalmente */
-  text-align: center;
+  justify-content: center;
+  align-items: center;
   position: relative;
   z-index: 1;
+}
+
+.login-content {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.login-form {
+  flex: 1;
+  padding-right: 20px;
+  text-align: center; /* Centra el texto en .login-form */
+
+}
+
+.lottie-container {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .login-box h2 {
