--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,20 +1,37 @@
 <div class="login-container">
   <div class="login-box">
-    <h2>Iniciar Sesión</h2>
-    <p>Empieza a gestionar y optimizar tus ahorros sin costo alguno.</p>
+    <div class="login-content">
+      <!-- Columna izquierda: Formulario de inicio de sesión -->
+      <div class="login-form">
+        <h2>Iniciar Sesión</h2>
+        <p>Empieza a gestionar y optimizar tus ahorros sin costo alguno.</p>
 
-    <form>
-      <label for="email">Correo electrónico</label>
-      <input type="email" id="email" placeholder="Correo electrónico" />
+        <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
+          <label for="email">Correo electrónico</label>
+          <input formControlName="email" type="email" id="email" placeholder="Correo electrónico" />
 
-      <label for="password">Contraseña</label>
-      <input type="password" id="password" placeholder="Contraseña" />
+          <label for="password">Contraseña</label>
+          <input formControlName="password" type="password" id="password" placeholder="Contraseña" />
 
-      <button type="submit" class="login-button">Iniciar</button>
-    </form>
+          <app-special-button label="Iniciar Sesión" (action)="onLogin()"></app-special-button>
+        </form>
 
-    <p class="register-link">
-      ¿Aún no tienes una cuenta? <a href="#">Regístrate</a>
-    </p>
+        <p class="register-link">
+          ¿Aún no tienes una cuenta? <a href="/register">Regístrate</a>
+        </p>
+      </div>
+
+      <!-- Columna derecha: Animación Lottie -->
+      <div class="lottie-container">
+        <dotlottie-player
+          src="https://lottie.host/7bf501c1-53dc-482e-b00a-443ca77d6265/HjQ7gTz3YH.json"
+          background="transparent"
+          speed="1"
+          style="width: 300px; height: 300px;"
+          loop
+          autoplay>
+        </dotlottie-player>
+      </div>
+    </div>
   </div>
 </div>
