--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -1,5 +1,4 @@
-<nz-result nzStatus="404" nzTitle="404" nzSubTitle="Sorry, the page you visited does not exist.">
-  <div nz-result-extra>
-    <button nz-button nzType="primary" routerLink="/dashboard">Back Home</button>
-  </div>
-</nz-result>
+<div class="not-found-container">
+  <div #lottieContainer style="width: 700px; height: 500px;"></div>
+  <a routerLink="/">Volver al inicio</a>
+</div>
