--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -24,7 +24,7 @@
         <input type="password" placeholder="Confirmar Contraseña" [(ngModel)]="user.confirmPassword" name="confirmPassword" required />
       </div>
 
-      <button type="submit">Crear cuenta</button>
+      <app-special-button label="Crear Cuenta" (action)="onRegister()"></app-special-button>
     </form>
 
     <p>¿Ya tienes una cuenta? <a routerLink="/login">Inicia sesión</a></p>
