--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,8 +4,8 @@
   </div>
   <div class="right-section">
     <nav class="main-nav">
-      <a href="#">Metas de Ahorro</a>
-      <a href="#">Presupuesto/Gastos</a>
+      <a href="/dashboard">Metas de Ahorro</a>
+      <a href="/dashboard-gastos">Presupuesto/Gastos</a>
       <a href="#">Resumen</a>
       <nz-avatar nzIcon="user" nzSize="large"></nz-avatar>
       <button class="hamburger-menu" (click)="toggleMenu()">☰</button>
@@ -13,7 +13,7 @@
   </div>
 
   <div *ngIf="menuOpen" class="dropdown-menu">
-    <a href="#">Perfil</a>
+    <a href="/perfil">Perfil</a>
     <a href="#">Cerrar sesión</a>
     <a href="#">Ayuda</a>
   </div>
