--- a/src/app/components/card-progreso/card-progreso.component.css
+++ b/src/app/components/card-progreso/card-progreso.component.css
@@ -2,25 +2,23 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px;
+  padding: 30px; /* Aumentamos el espacio interno */
   box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
   position: relative;
-  max-width: 600px;
-  overflow: visible; /* Permite que los elementos sobresalgan de los bordes de la tarjeta */
+  width: 100%; /* Aseguramos que use todo el contenedor */
+  max-width: 1200px; /* Ampliamos el ancho máximo */
+  overflow: visible; /* Permite que los elementos sobresalgan si es necesario */
   z-index: 1;
-  background-color: #EFEBF5; /* Color gris morado tenue */
-
+  background-color: #EFEBF5; /* Fondo gris-morado */
 }
 
 .card-content {
   display: flex;
   flex-direction: column;
-  gap: 10px;
-  width: 70%;
-  align-items: center;
-  justify-content: center;
-
+  gap: 15px; /* Mayor separación entre elementos */
+  width: 70%; /* Proporción ajustada */
+  align-items: center; /* Alineamos al inicio */
 }
 
 .card-content h3 {
@@ -40,7 +38,7 @@
 .info-item {
   display: flex;
   align-items: center;
-  gap: 5px;
+  gap: 10px;
   font-size: 1em;
   color: #2b1d6f;
 }
@@ -61,7 +59,7 @@
   display: flex;
   flex-direction: column;
   position: absolute;
-  right: -60px;
+  right: -70px;
   gap: 10px;
   z-index: -1;
 }
@@ -111,7 +109,6 @@
   justify-content: center;
   cursor: pointer;
   transition: background-color 0.3s ease;
-  font-size: 1.5em;
 }
 
 .edit-button:hover {
@@ -137,4 +134,24 @@
 .meta-info-item i {
   font-size: 1.5em;
   color: #7767df;
+}
+
+
+.abonar-button {
+  background-color: #7767df;
+  color: #ffffff;
+  border: 2px solid #ffffff;
+  border-radius: 25px;
+  padding: 10px 30px;
+  font-size: 1em;
+  width: 50%;
+  cursor: pointer;
+  margin-top: 20px;
+  transition: background-color 0.3s ease, border-color 0.3s ease;
+  text-align: center;
+}
+
+.abonar-button:hover {
+  background-color: #6656ce;
+  border-color: #ffffff;
 }
