--- a/src/app/components/modal-meta/modal-meta.component.html
+++ b/src/app/components/modal-meta/modal-meta.component.html
@@ -16,14 +16,16 @@
         <input id="inicial" formControlName="inicial" type="number" placeholder="$0.00" class="form-input" />
       </div>
       <div class="form-group">
-        <label for="periodicidad" class="form-label">Periodicidad del ahorro</label>
-        <select id="periodicidad" formControlName="periodicidad" class="form-input">
-          <option value="" disabled selected>Seleccione la periodicidad</option>
-          <option *ngFor="let option of periodicidades" [value]="option.value">
-            {{ option.viewValue }}
-          </option>
-        </select>
+        <label for="fecha_finalizacion" class="form-label">Fecha de finalización</label>
+        <input
+          type="date"
+          id="fecha_finalizacion"
+          formControlName="fecha_finalizacion"
+          class="form-input"
+        />
+
       </div>
+
       <button type="submit" class="modal-button">Guardar</button>
     </form>
   </div>
